--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <hr>
 <h4> University Programs
     <ul>
-        <li>Full Time Courses</li> 
+        <li>Full Time Courses 2021</li> 
         <li>Computer Science</li>
         <li> And Many More  </li>
     </ul>
