--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <div class="header">
-        <h2>This is a web page from Ayushman </h2>
+        <h2>This is a web page from Ayushman <b></h2>
     </div>
 
     <div class="body">
         <br><br><br><br>
         <h2>Lets start with the basic</h2>
-        <h2> <i>I am a student of Amity university.</i> </h2><br>
+        <h2> <i>I am a student of Amity university.</i><b> </h2><br>
         <hr><br>
         <p> Amity Education Group is India’s leading private education group, ranked amongst the top 3% Universities
             Globally by QS(we are ranked #1 in India and #37 in the world for our flagship program- Online MBA), UK
@@ -26,7 +26,7 @@
             accredited in
             the US & Canada. We were the very first in India to get UGC approval for our online programs.</p>
         <hr>
-        <h4> University Programs
+        <h4> University Programs:
             <ul>
                 <li>Full Time Courses 2021</li>
                 <li>Computer Science</li>
@@ -34,10 +34,12 @@
             </ul>
 
         </h4>
-        <a href="https:google.com" target="_blank">Google site</a>
+        <a href="https:google.com" target="_blank">Google</a>
+            <a href="https:facebook.com" target="_blank">Facebook</a>
+            <a href="https:instagram.com" target="_blank">Instagram</a>
     </div>
     <div class="footer">
-        <p>Thankyou for visiting</p>
+        <p>Thank you for visiting our web pages<b></p>
     </div>
 </body>
 <script>
